# CGPra1

./: .gitignore  CMakeLists.txt  images.qrc  shader.qrc
glbase/: CMakeLists.txt
gui/: config.cpp  config.h  glwidget.cpp  glwidget.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
planets/: cone.cpp  cone.h  coordinatesystem.cpp  coordinatesystem.h  deathstar.cpp  deathstar.h  drawable.cpp  drawable.h  orbit.cpp  orbit.h  path.cpp  path.h  planet.cpp  planet.h  ring.cpp  ring.h  skybox.cpp  skybox.h  sun.cpp  sun.h
shader/: cone.fs.glsl  cube.fs.glsl  cube.vs.glsl  path.fs.glsl  path.vs.glsl  phong.fs.glsl  phong.vs.glsl  ring.fs.glsl  simple.fs.glsl  simple.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  sun.fs.glsl  sun.vs.glsl
